objects/Participant__c.object
<CustomObject>
    <fields>
        <fullName>Public_Program_Name__c</fullName>
        <formula>case(Job__r.Public_Program_Name__c , 
&quot;Developing Effective Negotiation Skills&quot;, 
&quot;Developing Effective Negotiation Skills&quot;, 

&quot;Professional Negotiation and Influencing&quot;,
&quot;Professional Negotiation and Influencing&quot;, 

&quot;Advanced Negotiation and Influencing&quot;,
&quot;Advanced Negotiation and Influencing&quot;, 

&quot;Level 1 - Professional Negotiation&quot;,
&quot;Level 1 - Professional Negotiation&quot;,

&quot;Professional Negotiation - Level 1&quot;,
&quot;Professional Negotiation - Level 1&quot;,

&quot;Level 2 - Strategic Negotiation&quot;,
&quot;Level 2 - Strategic Negotiation&quot;,

&quot;Strategic Negotiation - Level 2&quot;,
&quot;Strategic Negotiation - Level 2&quot;,

&quot;Level 3 - Expert Negotiation&quot;,
&quot;Level 3 - Expert Negotiation&quot;,

&quot;Expert Negotiation - Level 3&quot;,
&quot;Expert Negotiation - Level 3&quot;,

&quot;Professional &amp; Strategic Negotiation&quot;,
&quot;Professional &amp; Strategic Negotiation&quot;,

&quot;Dynamics of Negotiation and Influencing:Feedback &amp; Finetuning&quot;,
&quot;Dynamics of Negotiation and Influencing:Feedback &amp; Finetuning&quot;,

&quot;Negotiating and Influencing Skills&quot;,
&quot;Negotiating and Influencing Skills&quot;,

&quot;Advanced Negotiator&quot;,
&quot;Advanced Negotiator&quot;,

&quot;Dynamics of Negotiation and Influencing&quot;,
&quot;Dynamics of Negotiation and Influencing&quot;,

&quot;Refresher&quot;,
&quot;Refresher&quot;,

&quot;Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren&quot;,
&quot;Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren&quot;,

&quot;Negotiation Fundamentals&quot;,
&quot;Negotiation Fundamentals&quot;,

&quot;Negotiation Preparation&quot;,
&quot;Negotiation Preparation&quot;,

&quot;Negotiation Tactics&quot;,
&quot;Negotiation Tactics&quot;,

&quot;Concessions &amp; Deadlocks&quot;,
&quot;Concessions &amp; Deadlocks&quot;,

&quot;Stakeholder Engagement&quot;,
&quot;Stakeholder Engagement&quot;,

&quot;null&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_2_Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ROI 2 Survey Completed
field is updated by survey gizmo</inlineHelpText>
        <label>ROI 2 Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_3_Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ROI 3 Survey Completed
field is updated by survey gizmo</inlineHelpText>
        <label>ROI 3 Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ROI survey 1</inlineHelpText>
        <label>ROI 1 Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Engagment_Mngt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick if pax has indicated interest on their public program evaluation</inlineHelpText>
        <label>Stakeholder Engagment/Mngt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_3_month_status__c</fullName>
        <label>Survey 3 month status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_6_week_status__c</fullName>
        <label>Survey 6 week status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Evaluation_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Evaluation complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Evaluation_status__c</fullName>
        <label>Survey Evaluation status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_NIP_status__c</fullName>
        <label>Survey NIP status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_PFQ_status__c</fullName>
        <label>Survey PFQ status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_RAIT_pre_status__c</fullName>
        <label>Survey RAIT (pre) status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Confirmation scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed and confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey RAIT (post) status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_matched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Admin only. For automations.</description>
        <label>Sync matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SysAd_Comments_Mass_Update__c</fullName>
        <label>SysAd Comments Mass Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Systemactic_Preparation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick if pax has indicated interest on their public program evaluation</inlineHelpText>
        <label>Systemactic Preparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Three_Month_Survey_URL__c</fullName>
        <formula>Job__r.Three_Month_Survey_URL__c &amp; &quot;?pid=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Three Month Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <description>This field is only used for processes to change it, so that formulas fire.</description>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date__c</fullName>
        <formula>Job__r.Job_First_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_month_case_study_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 month case study Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_week_case_study_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>6 week case study Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tmp_Counter__c</fullName>
        <label>tmp_Counter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <recordTypes>
        <fullName>PAX</fullName>
        <active>true</active>
        <description>Records for PAX after the 2018 refresh</description>
        <label>PAX</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAX_Legacy</fullName>
        <active>false</active>
        <description>Record type for PAX previous to 2018 refresh</description>
        <label>PAX Legacy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>